# docs/swagger.json
@@ -31,7 +31,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/schema.ResponseBody"
+                                    "$ref": "#/definitions/response.Body"
                                 },
                                 {
                                     "type": "object",
@@ -47,7 +47,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/schema.ResponseBody"
+                            "$ref": "#/definitions/response.Body"
                         }
                     }
                 }
@@ -55,6 +55,21 @@
         }
     },
     "definitions": {
+        "response.Body": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "error": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "schema.CurrentUserResponse": {
             "type": "object",
             "properties": {
@@ -71,21 +86,6 @@
                     "type": "string"
                 },
                 "valid": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "schema.ResponseBody": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "error": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "success": {
                     "type": "boolean"
                 }
             }
